# tpfi

./: .gitignore  LICENSE  README.md  download.py  plot_sector.py  pyproject.toml  tpfi.py  utils.py
.github/workflows/: CI.yml  plot.yml  release.yml
examples/: tutorial.ipynb
src/tpfi/: __init__.py  tpfi.py  utils.py
tests/: test_plot_functions.py
