[tool.poetry]
name = "tpfi"
version = "1.2.0"
description = "Plot identification charts for Kepler, K2 and TESS."
authors = ["Keyu Xing <kyxing@mail.bnu.edu.cn>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/keyuxing/tpfi"
repository = "https://github.com/keyuxing/tpfi"

[tool.poetry.dependencies]
lightkurve = ">=2.3"
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
parameterized = ">=0.9.0"
ruff = ">=0.0.284"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLW"]
src = ["src", "test"]
